--- a/views/head.twig
+++ b/views/head.twig
@@ -7,13 +7,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="/favicon.ico">
-
     <title>runbus.xyz</title>
-
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
-    <link href="jumbotron-narrow.css" rel="stylesheet">
-
+    <link href="/css/jumbotron-narrow.css" rel="stylesheet">
   </head>
