Add favicons, add OneSignal code (that isn't being used...)

--- a/views/footer.twig
+++ b/views/footer.twig
@@ -18,9 +18,11 @@
                 })
                 .done(function(response) {
                     var parsed_data = JSON.parse(response);
-
-                    $("#notice-bar").html(parsed_data.response);
-
+                    if(parsed_data.success){
+                        $("#notice-bar").html(parsed_data.response);
+                    }else{
+                    //    console.log("Error");
+                    }
                     /*
                     console.log(parsed_data);
                     */
@@ -38,7 +40,22 @@
 
     });
 
-
+/*
+    var OneSignal = window.OneSignal || [];
+    OneSignal.push(["init", {
+      appId: "13af647a-69a0-4b1a-86ed-10c78fa74ee7",
+      autoRegister: false,
+      notifyButton: {
+        enable: true
+      }
+    }]);
+    OneSignal.push(function() {
+  OneSignal.getUserId(function(userId) {
+    console.log("OneSignal User ID:", userId);
+   
+  });
+});
+*/
     window.onload = getLocation;
 
     var geo = navigator.geolocation;
@@ -67,5 +84,9 @@
             $('#find-me-button').attr('disabled', 'disabled');
         }
     }
+
+
+
+
+
 </script>
-<a href="https://github.com/snacsnoc/runbus">Github</a>
